_sass/_layout.scss
body {
  display: flex;
  min-height: 100vh;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
}
.site-header {
  width: 330px;
  height: 100vh;
  margin: 0;
}
.site-container {
  width: calc(100vw - 330px);
  height: 100vh;
  overflow: scroll;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.site-content {
  padding: 20px;
  width: 100%;
}
.site-footer {
  width: 100%;
  margin: 0;
}

// main {
//   flex: 1 0 auto;
// }

